--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.25.0
 streamlit-drawable-canvas==0.9.3
-pillow
-opencv-python
-ultralytics
+pillow==10.2.0
+opencv-python-headless
+ultralytics==8.0.200
 numpy
