--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-streamlit==1.35.0
+streamlit>=1.25,<1.35
 streamlit-drawable-canvas==0.9.3
-pillow==10.1.0
-opencv-python-headless
-ultralytics==8.0.200
-numpy
+pillow
