update main program

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-streamlit>=1.25,<1.35
+streamlit==1.25.0
 streamlit-drawable-canvas==0.9.3
-pillow
+torch==2.1.0
+torchvision==0.16.0
+Pillow==9.5.0
