--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.25.0
-torchvision==0.15.2
-Pillow
+streamlit==1.35.0
 streamlit-drawable-canvas==0.9.3
-torch==2.3.0
+torch==2.3.0+cpu
+torchvision==0.18.0+cpu
+Pillow==10.3.0
+--extra-index-url https://download.pytorch.org/whl/cpu
